@@ -5,7 +5,7 @@ AC_CONFIG_HEADER(config.h)
 AM_INIT_AUTOMAKE([-Wno-portability])
 
 dnl *** update these variables as versions change; also update AC_INIT ***
-libqpol_version=1.3
+libqpol_version=1.3.1
 libqpol_soname=libqpol.so.1
 libqpol_pyswig_soname=_qpol.so.1
 libqpol_jswig_soname=libjqpol.so.1
@@ -17,7 +17,7 @@ libapol_pyswig_soname=_apol.so.4
 libapol_jswig_soname=libjapol.so.4
 libapol_tswig_soname=libtapol.so.4
 
-libpoldiff_version=1.3.1
+libpoldiff_version=1.4
 libpoldiff_soname=libpoldiff.so.1
 libpoldiff_pyswig_soname=_poldiff.so.1
 libpoldiff_jswig_soname=libjpoldiff.so.1
